fixed font styling being misapplied. And the wrong font being used.

--- a/public/stylesheets/criteria.css
+++ b/public/stylesheets/criteria.css
@@ -42,14 +42,17 @@ hgroup span {
 }
 
 h1 {
-  font-family: "Open Sans Light", sans-serif;
+  font-family: "Open Sans Light Bold", sans-serif;
+  -webkit-font-smoothing: auto;
+  font-weight: 100;
   font-size: 46px;
   margin-bottom: 0.8em;
 }
 h2 {
   font-family: "Open Sans Light", sans-serif;
-  color: #4199D6;
+  -webkit-font-smoothing: auto;
   font-weight: 100;
+  color: #4199D6;
 }
 
 .wordmark + h1 {
